--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -48,7 +48,7 @@
       }
     ],
 
-    "FeatureProjects.Title": "Mis proyectos",
+    "FeatureProjects.Title": "Certificados",
     "FeatureProjects.Label": "Certificados",
     "FeatureProjects.Projects": [{
             "Title": "Javascript",
