--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -48,8 +48,8 @@
       }
     ],
 
-    "FeatureProjects.Title": "Certificadosss",
-    "FeatureProjects.Label": "Certificadosss",
+    "FeatureProjects.Title": "Licencias y certificaciones",
+    "FeatureProjects.Label": "Licencias y certificaciones",
     "FeatureProjects.Projects": [{
             "Title": "Javascript",
             "Description": "Certificado en JavaScript que valida mi capacidad para desarrollar aplicaciones web dinámicas y efectivas. <span class='underline'>Javascript</span><span class='underline'></span><span class='underline'></span>",
