--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -2,7 +2,7 @@
 
     "Header.Item1": "Acerca de mi",
     "Header.Item2": "Experiencia",
-    "Header.Item3": "Proyectos",
+    "Header.Item3": "Licencias y certificaciones",
     "Header.Item4": "Contacto",
     "Header.cvBtn": "Curriculum",
     "Header.cvName": "CV_Jose_Hernandez_Espanol.pdf",
