--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -8,7 +8,7 @@
     "Header.cvName": "CV_Jose_Hernandez_Espanol.pdf",
 
     "Banner.Pretitle": "Hola! Mi nombre es",
-    "Banner.Description": "Estoy acabando <span class='underline'>la carrera universitaria de Ingenieria de Sistemas</span> enfocandome en desarrollo backend y seguridad en <span class='underline'>La universidad de Huánuco</span> y en ocaciones realizando proyectos de <span class='underline'>Inteligencia Artificial.</span>",
+    "Banner.Description": "Estoy acabando <span class='underline'>la carrera universitaria de Ingeniería de Sistemas</span> enfocandome en desarrollo backend y seguridad en <span class='underline'>La universidad de Huánuco</span> y en ocaciones realizando proyectos de <span class='underline'>Inteligencia Artificial.</span>",
     "Banner.ActionBtn": "Contacto",
 
     "AboutMe.Title": "Acerca de mi",
