--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -69,14 +69,14 @@
 
 
 
-    "OtherProjects.Title": "Mas proyectos",
+    "OtherProjects.Title": "Más proyectos",
     "OtherProjects.Projects": [
     ],
 
     "Contact.Pretitle": "Y... ¿Ahora?",
-    "Contact.Title": "Contactame!",
+    "Contact.Title": "Contáctame!",
     "Contact.Content": "Estaré encantado de recibir tu contacto si quieres conversar acerca de nuevas oportunidades. Escríbeme, y te responderé tan pronto como vea tu mensaje.",
-    "Contact.Btn": "Contactame"
+    "Contact.Btn": "Contáctame"
 
 
 }
